app/styles/sidebar/_sidebar-actions.scss
.sidebar {
	
	// Logo
	.swipes-logo {
		display:none;
		position: relative;
		width: 50px;
		height: 50px;
		margin-bottom:1em;
		
		@include breakpoint(min-height, 320px){
			display: inline-block;
		}
		background-color: #fff;
		@include border-radius(50%);
		border-top: 1px solid #f3f4f4;
		border-bottom: 1px solid #c6c7c8;
		overflow: hidden;

			> img {
				@include centerBlock(0, 0, 0, 0, auto, absolute);
			}

	}


	.sub-back {
		line-height: 1;
		color: #1b1e23;
		@include square(35px);
		@include centerBlock(2em, auto, auto, 2em, 0, absolute);
		margin-top: -8px;

			svg {
				@include centerBlock(0, 0, 0, 0, auto, absolute);
				fill: $nav-gray;
				@include square(26px);
			}

			&:hover svg {
				fill: $gray-labels;
			}
	}

	
	// Control menus
	.sidebar-controls.hasActiveEl {
		> li {
			> a {
				&:hover{
					opacity:1.0;
				}
				opacity:0.3;
				&.active{
					opacity: 0.8;
					svg {
						fill: $brand-dakrcolor;
					}
				}
			}
		}
	}
	.sidebar-controls {
		@extend .list-unstyled;

			> li {
				margin-top:1em;
				@include breakpoint(mobile, height){
					margin-top: 1.5em;
				}
					> a {
						width:36px;
						height:36px;
						display:block;
						@include border-radius(50%);
						line-height: 36px;
						opacity:0.8;
						margin-left:16px;
						&:hover{
							opacity:1.0;
						}
						//@include opacity(0.3);
						@include transition(opacity 120ms ease-in-out, transform 100ms ease-in-out);
						> svg{
							width:36px;
							height:36px;
							fill: $gray-labels;
						}
					}

					&:nth-child(4) {
						position:absolute;
						bottom: 10px;
						@include breakpoint(mobile, height){
							bottom: 35px;
						}
						left:0;
						right:0;

						margin: auto;
						> a {
							margin-left:24px;
						}
						
					}

			}
	}


	.sub-title {
		font-size: 13.5px;
		font-family: $font-normal;
		color: $gray-labels;
		margin: 1.3em 0 1.5em;
		@include breakpoint(tablet){
			margin: 0 0 3.5em;
		}
		line-height: 1;
		text-align: center;
		letter-spacing: 2px;

			svg {
				display: inline-block;
				@include square(20px);
				fill: $gray-labels;
				vertical-align: middle;
			}

			span {
				display: inline-block;
				vertical-align: middle;
				line-height: 20px;
				text-transform: uppercase;
			}
	}


	.search-filter {
		
	}


}

